Improved placeholder placement - a bit of margin so it doesn't get clipped and z-index to ensure it's on top (still fails in one scenarion but I'm going to ignore it - it's clipped when under selected item)

--- a/app/assets/stylesheets/sidebar.tailwind.css
+++ b/app/assets/stylesheets/sidebar.tailwind.css
@@ -86,11 +86,12 @@
     [data-controller~="draggable"] {
         --drop-placeholder-height: 36px;
         position: relative;
+        z-index: 1;
+        isolation: isolate;
 
         /* Add small gap between items to allow dropping between siblings */
-        & > li:not(.sortable-dragging):not(.sortable-placeholder) {
-            margin-top: 1px;
-            margin-bottom: 1px;
+        & > li {
+            @apply my-[1px];
         }
 
         /* Empty containers during drag - make them valid drop targets */
@@ -108,7 +109,8 @@
     /*       placeholderClass: 'sortable-placeholder float-left bg-indigo-600 h-0.5 w-[268px] data-[surround=true]:before:hidden absolute before:absolute before:h-2 before:w-2 before:-top-[3px] before:border-2 before:border-solid before:rounded-full before:bg-white before:border-indigo-600' */
     .sortable-placeholder {
         --level: 0;
-        @apply float-left bg-indigo-600 h-0.5 absolute;
+        @apply bg-indigo-600 h-0.5 absolute;
+        z-index: 50;
 
         /* Adaptive width based on nesting level */
         margin-left: calc(var(--level) * 16px);
@@ -117,6 +119,7 @@
         /* Dot indicator before the line */
         &::before {
             content: "";
+
             @apply absolute h-2 w-2 -top-[3px] border-2 border-solid rounded-full bg-white border-indigo-600;
         }
 
